# urfu-schedule-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
data/: database.db
docs/source/: api.rst  conf.py  index.rst
src/: bot.py  config.py  handlers.py  types.py
src/data/: preset_groups.py
src/database/: __init__.py  connection.py  user_data.py
src/services/: __init__.py  group_service.py  schedule_service.py
src/utils/: __init__.py  formatters.py
