[tool.poetry]
name = "urfu-schedule-bot"
version = "0.1.0"
description = ""
authors = ["Ваше Имя <email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.5"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
