[tool.poetry]
name = "urfu-schedule-bot"
version = "0.1.0"
description = "Telegram bot for UrFU schedule"
authors = ["Ваше Имя <email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

# Зависимости
[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.5"  # Обратите внимание на версию! v20.x — это последняя основная ветка с асинхронным API по умолчанию.
python-dotenv = "1.2.1"

# Группа зависимостей для разработки
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.1.0"  # Дополнительно: быстрый линтер и форматтер

# Скрипты
[tool.poetry.scripts]
bot = "src.bot:main"

# Конфигурация pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short"
]

# Конфигурация black
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Конфигурация isort
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]

# Конфигурация ruff (опционально)
[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"